--- a/main.css
+++ b/main.css
@@ -1,17 +1,23 @@
-
 * {
 	margin: 0;
 	box-sizing: border-box;
 	font-family: "Fira sans", sans-serif;
-    background-image: linear-gradient(to right , #e65c00,#F9D423);
+    /* background-image: linear-gradient(to right , #e65c00,#F9D423); */
+    
+    
 }
 
 body {
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
+
 	color: #FFF;
-	background-color: #374151;
+	/* background-color: #374151; */
+	/* background-color: rgb(158, 45, 45); */
+    /* background-image: linear-gradient(to right ,#ee0979, #ff6a00); */
+	background-image: linear-gradient(to right ,#000000, #434343);
+    
 }
 
 header {
@@ -19,12 +25,13 @@ header {
 	max-width: 800px;
 	width: 100%;
 	margin: 0 auto;
+    color: rgb(216, 206, 206);
 }
 
 header h1{ 
 	font-size: 2.5rem;
 	font-weight: 300;
-	color: #6B7280;
+	color: #c2c5cc;
 	margin-bottom: 1rem;
 }
 
@@ -41,19 +48,20 @@ input, button {
 
 #new-task-input {
 	flex: 1 1 0%;
-	background-color: #1F2937;
+	background-color: #3a6aad;
 	padding: 1rem;
 	border-radius: 1rem;
 	margin-right: 1rem;
-	color: #EEE;
+	color: #fff;
 	font-size: 1.25rem;
 }
 
 #new-task-input::placeholder {
-	color: #111827;
+	color: #e9ecf3;
 }
 
 #new-task-submit {
+   
 	color: #EC4899;
 	font-size: 1.25rem;
 	font-weight: 700;
@@ -65,7 +73,7 @@ input, button {
 }
 
 #new-task-submit:hover {
-	opacity: 0.8;
+	opacity: 0.
 }
 
 #new-task-submit:active {
@@ -81,13 +89,17 @@ main {
 
 .task-list {
 	padding: 1rem;
+    
 }
 
 .task-list h2 {
 	font-size: 1.5rem;
 	font-weight: 300;
-	color: #6B7280;
+	color: #c9ccd3;
 	margin-bottom: 1rem;
+    /* -webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+    background-image: linear-gradient(to right ,#ff4b1f , #1fddff ); */
 }
 
 #tasks .task {
