--- a/main.css
+++ b/main.css
@@ -48,7 +48,7 @@ input, button {
 
 #new-task-input {
 	flex: 1 1 0%;
-	background-color: #111827;
+	background-color: #a2a3a7;
 	padding: 1rem;
 	border-radius: 1rem;
 	margin-right: 1rem;
@@ -97,6 +97,7 @@ main {
 	font-weight: 300;
 	color: #c9ccd3;
 	margin-bottom: 1rem;
+	text-align: center;
     /* -webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
   /*  background-image: linear-gradient(to right ,#ff4b1f , #1fddff ); */
@@ -105,7 +106,7 @@ main {
 #tasks .task {
 	display: flex;
 	justify-content: space-between;
-	background-color:  #111827;
+	background-color:  #bdc0c7;
 	padding: 1rem;
 	border-radius: 1rem;
 	margin-bottom: 1rem;
